# NetBilling-2025-NJUPT-Program-Practice

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md
ewt/: CMakeLists.txt
ewt/ElaWidgetTools/: CMakeLists.txt  ElaTabBar.cpp
resources/: app.qrc
src/: main.cpp
src/backend/: SettingsManager.cpp  SettingsManager.h  billing.cpp  billing.h  models.h  repository.cpp  repository.h  security.cpp  security.h  settings_manager.cpp  settings_manager.h
src/qml/: App.qml
src/qml/components/: AcrylicPane.qml
src/qml/pages/: BillingPage.qml
src/qml/styles/: Universal.qml
src/ui/: NavigationPaneController.cpp  NavigationPaneController.h  ThemeUtils.cpp  ThemeUtils.h  mainwindow.cpp  mainwindow.h  theme_utils.cpp  theme_utils.h
src/ui/dialogs/: LoginDialog.cpp  LoginDialog.h  PasswordDialog.cpp  PasswordDialog.h  RegisterDialog.cpp  RegisterDialog.h  SessionEditorDialog.cpp  SessionEditorDialog.h  UserEditorDialog.cpp  UserEditorDialog.h  login_dialog.cpp  login_dialog.h  password_dialog.cpp  password_dialog.h  register_dialog.cpp  register_dialog.h  session_editor_dialog.cpp  session_editor_dialog.h  user_editor_dialog.cpp  user_editor_dialog.h
src/ui/pages/: BasePage.cpp  BasePage.h  BillingPage.cpp  BillingPage.h  DashboardPage.cpp  DashboardPage.h  RechargePage.cpp  RechargePage.h  ReportsPage.cpp  ReportsPage.h  SessionsPage.cpp  SessionsPage.h  SettingsPage.cpp  SettingsPage.h  UserStatisticsPage.cpp  UserStatisticsPage.h  UsersPage.cpp  UsersPage.h  base_page.cpp  base_page.h  billing_page.cpp  billing_page.h  dashboard_page.cpp  dashboard_page.h  recharge_page.cpp  recharge_page.h  reports_page.cpp  reports_page.h  sessions_page.cpp  sessions_page.h  settings_page.cpp  settings_page.h  users_page.cpp  users_page.h
